--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
   </style>
 </head>
 <body>
-  <h1>⚡ACDC BOYS BBALL⚡</h1>
-
+  <h1>⚡ACDC BOYS BBALL AITry⚡</h1>
+  <div id="event-selection"></div>
+  <div id="attendee-list"></div>
   <div id="user-selection">
     <label for="user-dropdown">Select your name:</label>
     <select id="user-dropdown">
@@ -72,8 +73,7 @@
     </select>
   </div>
 
-  <div id="event-selection"></div>
-  <div id="attendee-list"></div>
+  
 
   <script>
     const firebaseConfig = {
