--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
   </style>
 </head>
 <body>
-  <h1>⚡ACDC BOYS BBALL AITry⚡</h1>
-  <div id="event-selection"></div>
-  <div id="attendee-list"></div>
+  <h1>⚡ACDC BOYS BBALL⚡</h1>
+
   <div id="user-selection">
     <label for="user-dropdown">Select your name:</label>
     <select id="user-dropdown">
@@ -73,7 +72,8 @@
     </select>
   </div>
 
-  
+  <div id="event-selection"></div>
+  <div id="attendee-list"></div>
 
   <script>
     const firebaseConfig = {
@@ -199,5 +199,3 @@ function renderAttendeeList(name) {
 </body>
 
 </html>         
-</body>
-</html>  
