--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ function renderAttendeeList(name) {
       });
     });
 
-    const userSelect = document.getElementById("user-select");
+    const userSelect = document.getElementById("user-dropdown");
     userSelect.addEventListener("change", () => {
       currentUser = userSelect.value;
       renderEventSelection();
