--- a/index.html
+++ b/index.html
@@ -6,135 +6,105 @@
   <title>Event Attendance</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@openai/api@0.5.1"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
+<style>
+body {
+  font-family: Arial, sans-serif; 
 
-    #event-selection {
-      margin-bottom: 1rem;
-    }
+}
 
-    .attendee-list {
-      margin-bottom: 1rem;
-    }
+#event-selection {
+  margin-bottom: 1rem;
+}
 
-    .attendee {
-      display: flex;
-      align-items: center;
-      margin-bottom: 0.5rem;
-    }
+.attendee-list {
+  margin-bottom: 1rem;
+}
 
-    .attendee-name {
-      width: 150px;
-      font-weight: bold;
-    }
+.attendee {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
 
-    .attendee-checkbox {
-      margin-left: 10px;
-    }
+.attendee-name {
+  width: 150px;
+  font-weight: bold;
+}
 
-    h1 {
-      text-align: center;
-      font-size: calc(1rem + 2vw);
-      white-space: nowrap;
-      overflow: hidden;
-    }
-  </style>
+.attendee-checkbox {
+  margin-left: 10px;
+}
+h1 {
+  text-align: center;
+  font-size: calc(1rem + 2vw);
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+</style>
 </head>
 <body>
   <h1>⚡ACDC BOYS BBALL⚡</h1>
 
-  <div id="user-selection">
-    <label for="user-dropdown">Select your name:</label>
-    <select id="user-dropdown">
-      <option value="" disabled selected>Select your name</option>
-      <option value="AJ">AJ</option>
-      <option value="Anaias">Anaias</option>
-      <option value="Peter">Peter</option>
-      <option value="Garth">Garth</option>
-      <option value="Ryder">Ryder</option>
-      <option value="Sabas">Sabas</option>
-      <option value="Hunter">Hunter</option>
-      <option value="Tyson">Tyson</option>
-      <option value="Tate">Tate</option>
-      <option value="Jamian">Jamian</option>
-      <option value="Ethan">Ethan</option>
-      <option value="Isaiah">Isaiah</option>
-      <option value="TyBo">TyBo</option>
-      <option value="Justin">Justin</option>
-      <option value="Koda">Koda</option>
-      <option value="Kashton">Kashton</option>
-      <option value="Ty">Ty</option>
-      <option value="Ephesian">Ephesian</option>
-      <option value="Others">Others?</option>
-    </select>
-  </div>
-
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCTVf7UuZYlMfiRRdF3aOZlipVgGwWntsM",
+    authDomain: "acdcboybasketball.firebaseapp.com",
+    databaseURL: "https://acdcboybasketball-default-rtdb.firebaseio.com",
+    projectId: "acdcboybasketball",
+    storageBucket: "acdcboybasketball.appspot.com",
+    messagingSenderId: "488795731492",
+    appId: "1:488795731492:web:4d20b1644c27f85388cab1"
+  };
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCTVf7UuZYlMfiRRdF3aOZlipVgGwWntsM",
-  authDomain: "acdcboybasketball.firebaseapp.com",
-  databaseURL: "https://acdcboybasketball-default-rtdb.firebaseio.com",
-  projectId: "acdcboybasketball",
-  storageBucket: "acdcboybasketball.appspot.com",
-  messagingSenderId: "488795731492",
-  appId: "1:488795731492:web:4d20b1644c27f85388cab1"
-    };
+  const firebaseApp = firebase.initializeApp(firebaseConfig);
+  const database = firebaseApp.database();
 
-    firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
-    const openai = require('@openai/api');
-    openai.apiKey = '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';
-    const events = [
-  { name: "DC Open GYM", date: "March 18, 10am" },
-  { name: "U16 Spring Jam Sioux Falls", date: "April 22-23" },
-  { name: "USF Team Sioux Falls", date: "June 17-18" },
-  { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-  { name: "Hardknockers Rapid City", date: "July 28-29" }
-];
+  const events = [
+//{ name: "DC Open GYM", date: "March 18, 10am" },
+    { name: "Hardknockers Team Camp Rapid City", date: "June 3-4" },
+    { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
+        { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
+    { name: "Dakota Weslyn Team Camp", date: "TBD" }
+  ];
 
-const attendees = [
-  "AJ", "Anaias", "Peter", "Garth", "Ryder", "Sabas", "Hunter", "Tyson", "Tate", "Jamian", "Ethan", "Isaiah", "TyBo", "Justin", "Koda", "Kashton", "Ty", "Ephesian", "Others?"
-];
+  const attendees = [
+    "AJ", "Anaias", "Peter", "Garth", "Ryder", "Sabas", "Hunter", "Tyson", "Tate", "Jamian", "Ethan", "Isaiah", "TyBo", "Justin", "Koda", "Kashton", "Ty", "Ephesian", "Others?"
+  ];
 
-let currentUser = "";
+  function updateAttendance(eventIndex, attendeeIndex, attending) {
+    const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
+    eventRef.set(attending);
+  }
 
-function updateAttendance(eventIndex, attendeeIndex, attending) {
-  const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
-  eventRef.set(attending);
-}
+  function renderEventSelection() {
+    const eventSelection = document.getElementById("event-selection");
+    eventSelection.innerHTML = "";
 
-function renderEventSelection() {
-  const eventSelection = document.getElementById("event-selection");
-  eventSelection.innerHTML = "";
+    const select = document.createElement("select");
+    select.addEventListener("change", () => {
+      renderAttendeeList(select.selectedIndex);
+    });
 
-  const select = document.createElement("select");
-  select.addEventListener("change", () => {
-    renderAttendeeList(select.value);
-  });
+    const defaultOption = document.createElement("option");
+    defaultOption.textContent = "Select an event";
+    defaultOption.disabled = true;
+    defaultOption.selected = true;
+    select.appendChild(defaultOption);
 
-  const defaultOption = document.createElement("option");
-  defaultOption.textContent = "Select your name";
-  defaultOption.disabled = true;
-  defaultOption.selected = true;
-  select.appendChild(defaultOption);
+    events.forEach((event, index) => {
+      const option = document.createElement("option");
+      option.textContent = `${event.name} (${event.date})`;
+      option.value = index;
+      select.appendChild(option);
+    });
 
-  attendees.forEach((attendee) => {
-    const option = document.createElement("option");
-    option.textContent = attendee;
-    option.value = attendee;
-    select.appendChild(option);
-  });
+    eventSelection.appendChild(select);
+  }
 
-  eventSelection.appendChild(select);
-}
-
-function renderAttendeeList(name) {
+  function renderAttendeeList(eventIndex) {
   const attendeeList = document.getElementById("attendee-list");
   attendeeList.innerHTML = "";
 
@@ -151,51 +121,23 @@ function renderAttendeeList(name) {
     attendeeCheckbox.type = "checkbox";
     attendeeCheckbox.classList.add("attendee-checkbox");
     attendeeCheckbox.addEventListener("change", (event) => {
-      if (event.target.checked) {
-        if (attendee === currentUser) {
-          updateAttendance(eventIndex, attendeeIndex, true);
-        } else {
-          event.target.checked = false;
-          const prompt = `You can only select events for ${currentUser}. Please uncheck the checkbox and select your name from the dropdown to change users.`;
-          openai.completions.create({
-            engine: 'text-davinci-002',
-            prompt: prompt,
-            maxTokens: 64,
-            n: 1,
-            stop: '\n'
-          })
-          .then((response) => {
-            const message = response.choices[0].text.trim();
-            alert(message);
-          })
+      updateAttendance(eventIndex, attendeeIndex, event.target.checked);
+    });
+    attendeeDiv.appendChild(attendeeCheckbox);
 
-
-          .catch((error) => {
-            console.error(error);
-          });
-      });
-      attendeeDiv.appendChild(attendeeCheckbox);
-      attendeeList.appendChild(attendeeDiv);
-
-      // Load saved attendance information from Firebase
-      const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
-      eventRef.on("value", (snapshot) => {
-        attendeeCheckbox.checked = snapshot.val() || false;
-      });
+    // Load saved attendance information from Firebase
+    const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
+    eventRef.on("value", (snapshot) => {
+      attendeeCheckbox.checked = snapshot.val() || false;
     });
 
-    const userSelect = document.getElementById("user-dropdown");
-    userSelect.addEventListener("change", () => {
-      currentUser = userSelect.value;
-      renderEventSelection();
-    });
+    attendeeList.appendChild(attendeeDiv);
+  });
+}
 
-    function init() {
-      renderEventSelection();
-    }
 
-    window.addEventListener("load", init);
-  </script>
+  renderEventSelection();
+
+</script>
 </body>
-
-</html>         
+</html>
