--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ h1 {
 </head>
 <body>
   <h1>⚡ACDC BOYS BBALL⚡</h1>
-
+<h1>Select Event, Check if Planning to Attend</h1>
+<h1>All changes happen in Real Time</h1>
+<h1>ATTENDANCE is </h1>
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
 <script>
@@ -67,7 +69,8 @@ h1 {
     { name: "Hardknockers Team Camp Rapid City", date: "June 3-4" },
     { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
         { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-    { name: "Dakota Weslyn Team Camp", date: "TBD" }
+    { name: "Dakota Weslyn Team Camp", date: "TBD" },
+    { name: "USF Elite Skills Camp", date: "August 5" }
   ];
 
   const attendees = [
