--- a/index.html
+++ b/index.html
@@ -40,14 +40,20 @@ h1 {
   white-space: nowrap;
   overflow: hidden;
 }
+h2 {
+    text-align: center;
+    font-size: calc(.5rem + 1vw);
+    white-space: nonrap;
+    overflow: hidden;
 
+}
 </style>
 </head>
 <body>
   <h1>⚡ACDC BOYS BBALL⚡</h1>
-<h1>Select Event, Check if Planning to Attend</h1>
-<h1>All changes happen in Real Time</h1>
-<h1>ATTENDANCE is </h1>
+<h2>Select Event, Check if Planning to Attend</h2>
+<h2>All changes happen in Real Time</h2>
+
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
 <script>
