--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ h2 {
   const database = firebaseApp.database();
 
   const events = [
-//{ name: "DC Open GYM", date: "March 18, 10am" },
-    { name: "Hardknockers Team Camp Rapid City", date: "June 3-4" },
-    { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
-        { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-    { name: "Dakota Weslyn Team Camp", date: "TBD" },
-    { name: "USF Elite Skills Camp", date: "August 5" }
+{ name: "Final Four Season Party 2023", date:"Sat April 1st, 6pm @DC leave Lake @5:30p" },
+   // { name: "Hardknockers Team Camp Rapid City", date: "June 3-4" },
+   // { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
+      //  { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
+   // { name: "Dakota Weslyn Team Camp", date: "TBD" },
+   // { name: "USF Elite Skills Camp", date: "August 5" },
   ];
 
   const attendees = [
