--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@ h2 {
 
   const events = [
 { name: "Final Four Season Party 2023", date:"Sat April 1st, 5pm @DC leave Lake @4:30p" },
-   // { name: "Hardknockers Team Camp Rapid City", date: "June 3-4" },
-   // { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
-      //  { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-   // { name: "Dakota Weslyn Team Camp", date: "TBD" },
-   // { name: "USF Elite Skills Camp", date: "August 5" },
+    { name: "Hardknockers Team Camp Rapid City", date: "June 3-4" },
+    { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
+    { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
+    { name: "Dakota Weslyn Team Camp", date: "TBD" },
+    { name: "USF Elite Skills Camp", date: "August 5" },
   ];
 
   const attendees = [
-    "AJ", "Anaias", "Peter", "Garth", "Ryder", "Sabas", "Hunter", "Tyson", "Tate", "Jamian", "Ethan", "Isaiah", "TyBo", "Justin", "Koda", "Kashton", "Ty", "Ephesian", "Others?"
+    "AJ", "Anaias", "Peter", "Garth", "Ryder", "Sabas", "Hunter", "Tyson", "Jamian", "Ethan", "Isaiah","Kashton", "TyBo", "Haepi","Ta'te","Justin", "Koda", "Ty", "Ephesian"
   ];
 
   function updateAttendance(eventIndex, attendeeIndex, attending) {
