--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Attendance</title>
-  // <link rel="icon" type="image/png" href="path/to/favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 <style>
@@ -72,12 +72,12 @@ h2 {
   const database = firebaseApp.database();
 
   const events = [
-//  { name: "Final Four Season Party 2023", date:"Sat April 1st, 5pm @DC leave Lake @4:30p" },
     { name: "Hardrocker Team Camp Rapid City", date: "June 3-4" },
     { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
     { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
     { name: "Dakota Weslyn Team Camp", date: "TBD" },
     { name: "USF Elite Skills Camp", date: "August 5" },
+//  { name: "Final Four Season Party 2023", date:"Sat April 1st, 5pm @DC leave Lake @4:30p" },
   ];
 
   const attendees = [
