--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ h2 {
     { name: "Hardrocker Team Camp Rapid City", date: "June 3-4" },
     { name: "Coach DeHaan- Team Practice at DC", date: "June 26-30" },
     { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-    { name: "Dakota Weslyn Team Camp", date: "TBD" },
+    { name: "Dakota Weslyn Team Camp", date: "July 17" },
     { name: "USF Elite Skills Camp", date: "August 5" },
 //  { name: "Final Four Season Party 2023", date:"Sat April 1st, 5pm @DC leave Lake @4:30p" },
   ];
