--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ h2 {
   <h1>⚡ACDC BOYS BBALL⚡</h1>
 <h2>Select Event, Check if Planning to Attend</h2>
 <h2>All changes happen in Real Time</h2>
+<h2>⚡Join this class if you Plan on being on the Team⚡</h2>
+<h2> https://classroom.google.com/c/NTEyODA4NTk1NzQw?cjc=xrlpway </h2>
 
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
