--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ h2 {
 <h2>Select Event, Check if Planning to Attend</h2>
 <h2>All changes happen in Real Time</h2>
 <h2>⚡Join this class if you Plan on being on the Team⚡</h2>
-<h2> https://classroom.google.com/c/NTEyODA4NTk1NzQw?cjc=xrlpway </h2>
+<a href="https://classroom.google.com/c/NTEyODA4NTk1NzQw?cjc=xrlpway"></a></h2>
 
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
